--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Justin Calvert POS</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="./login screen/styles.css" />
   </head>
   <body>
     <div class="center">
@@ -28,5 +28,5 @@
       </form>
     </div>
   </body>
-  <script src="index.js"></script>
+  <script src="./login screen/index.js"></script>
 </html>
