--- a/register/register.html
+++ b/register/register.html
@@ -1,50 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Registering</title>
-    <link rel="stylesheet" href="register.css">
-</head>
-<body>
+    <link rel="stylesheet" href="register.css" />
+    <script
+      src="https://kit.fontawesome.com/674498e59a.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
+  <body>
     <div class="center">
-        <h1>Register</h1>
-        <form method="POST">
-            <div class="text_area">
-                <input type="text" required>
-                <span></span>
-                <label>First Name</label>
-              </div>
-              <div class="text_area">
-                <input type="text" required>
-                <span></span>
-                <label>Last Name</label>
-              </div>
-              <div class="text_area">
-                <input type="number" required>
-                <span></span>
-                <label>Cellphone Number</label>
-              </div>
-              <div class="text_area">
-                <input type="email" required>
-                <span></span>
-                <label>Email Address</label>
-              </div>
-              <div class="text_area">
-                <input type="text" required>
-                <span></span>
-                <label>Username</label>
-              </div>
-              <div class="text_area">
-                <input type="password" required>
-                <span></span>
-                <label>Password</label>
-              </div>
-              <input type="submit" value="Register">
-              <input type="submit" value="Back">
-        </form>
+      <h1>Register</h1>
+      <form method="POST">
+        <div class="text_area">
+          <input type="text" required />
+          <span></span>
+          <label>First Name</label>
+        </div>
+        <div class="text_area">
+          <input type="text" required />
+          <span></span>
+          <label>Last Name</label>
+        </div>
+        <div class="text_area">
+          <input type="number" required />
+          <span></span>
+          <label>Cellphone Number</label>
+        </div>
+        <div class="text_area">
+          <input type="email" required />
+          <span></span>
+          <label>Email Address</label>
+        </div>
+        <div class="text_area">
+          <input type="text" required />
+          <span></span>
+          <label>Username</label>
+        </div>
+        <div class="text_area">
+          <input type="password" required />
+          <span></span>
+          <label>Password</label>
+        </div>
+        <input type="submit" value="Register" />
+        <a href="../index.html" class="signup_link"
+          ><i class="fas fa-angle-double-left"></i>Back<i
+            class="fas fa-angle-double-right"
+          ></i
+        ></a>
+      </form>
     </div>
-</body>
-<script src="register.js"></script>
+  </body>
+  <script src="register.js"></script>
 </html>
