--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
         </div>
         <input type="submit" value="Login" />
         <div class="signup_link">
-          Not a member? <button id="myBtn" class="btn">Sign Up</button>
+          Not a member?
+          <a href="./register/register.html">Sign Up</a>
         </div>
       </form>
     </div>
