--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="./login screen/styles.css" />
   </head>
   <body>
+    <div class="header">
+      <h1>Justin's Fruit and Veg</h1>
+    </div>
     <div class="center">
       <h1>Login</h1>
       <form method="POST">
