--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
     </div>
     <div class="center">
       <h1>Login</h1>
-      <form method="POST">
+      <form
+        action="https://boiling-plains-09363.herokuapp.com/auth"
+        method="GET"
+        id="form"
+      >
         <div class="text_area">
           <input type="text" required />
           <span></span>
@@ -34,3 +38,5 @@
   </body>
   <script src="./login screen/index.js"></script>
 </html>
+
+<!-- https://boiling-plains-09363.herokuapp.com/auth -->
