--- a/products/products.html
+++ b/products/products.html
@@ -6,5 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Justin Calvert Products</title>
   </head>
-  <body></body>
+  <body>
+    <div class="Header">
+      <h1>Welcome to our products</h1>
+    </div>
+    <div id="project-container"></div>
+  </body>
 </html>
