--- a/products/products.html
+++ b/products/products.html
@@ -11,6 +11,37 @@
     <div class="header">
       <h1>Welcome to our products</h1>
     </div>
+    <!-- Trigger/Open The Modal -->
+    <button id="myBtn">Add Products</button>
+
+    <!-- The Modal -->
+    <div id="myModal" class="modal">
+      <!-- Modal content -->
+      <div class="modal-content">
+        <span class="close">&times;</span>
+        <h3>Fill in the fields below to add a Product</h3>
+        <div class="text_area">
+          <input type="text" required />
+          <span></span>
+          <label>Title of Product</label>
+        </div>
+        <div class="text_area">
+          <input type="text" required />
+          <span></span>
+          <label>Product Category</label>
+        </div>
+        <div class="text_area">
+          <input type="number" required />
+          <span></span>
+          <label>Product Quantity</label>
+        </div>
+        <div class="text_area">
+          <input type="number" required />
+          <span></span>
+          <label>Cost of Product</label>
+        </div>
+      </div>
+    </div>
     <div id="project-container"></div>
   </body>
   <script src="./products.js"></script>
