--- a/products/products.html
+++ b/products/products.html
@@ -19,7 +19,7 @@
     <div id="filters">
       <form onsubmit="event.preventDefault(); searchProduct();">
         <input type="text" required id="searchItem" />
-        <button type="submit"></button>
+        <button type="submit">Search</button>
       </form>
     </div>
     <!-- Trigger/Open The Modal -->
