--- a/products/products.html
+++ b/products/products.html
@@ -62,6 +62,9 @@
       </div>
     </div>
     <div id="project-container"></div>
+    <!-- cart -->
+    <div id="cart" class="active">hello</div>
+    <button openCart id="cart-btn">CART</button>
   </body>
   <script src="./products.js"></script>
 </html>
