--- a/products/products.html
+++ b/products/products.html
@@ -63,8 +63,8 @@
     </div>
     <div id="project-container"></div>
     <!-- cart -->
-    <div id="cart" class="active">hello</div>
-    <button openCart id="cart-btn">CART</button>
+    <div id="cart">Your cart is empty.</div>
+    <button onclick="openCart()" id="cart-btn">CART</button>
   </body>
   <script src="./products.js"></script>
 </html>
