--- a/register/register.html
+++ b/register/register.html
@@ -45,7 +45,7 @@
           <span></span>
           <label>Password</label>
         </div>
-        <input type="submit" value="Register" />
+        <input type="submit" value="Register" onclick="newUser()" />
         <a href="../index.html" class="signup_link"
           ><i class="fas fa-angle-double-left"></i>Back<i
             class="fas fa-angle-double-right"
