--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <span></span>
           <label>Password</label>
         </div>
-        <input type="submit" value="Login" />
+        <input type="submit" value="Login" onclick="loggingIn()" />
         <div class="signup_link">
           Not a member?
           <a href="./register/register.html">Sign Up</a>
